# oma-welcome

./: .directory  Makefile  README.md  om-welcome.desktop  om-welcome.in  sidu-welcome.desktop
.github/: FUNDING.yml
etc/skel/: om-welcome.desktop
launcher/: CMakeLists.txt  Page.cpp  Page.h  main.cpp
locale/de/: om-welcome.mo  om-welcome.po
locale/en/: om-welcome.mo  om-welcome.po
locale/fr/: om-welcome.mo  om-welcome.po
locale/id/: om-welcome.mo  om-welcome.po
locale/it/: om-welcome.mo  om-welcome.po
locale/pt_BR/: om-welcome.mo  om-welcome.po
locale/pt_PT/: om-welcome.mo  om-welcome.po
locale/tr/: om-welcome.mo  om-welcome.po
po/: ca.po  de.po  en.po  fi.po  fr.po  fr_FR.po  id.po  it.po  it.po.bak  it_IT.po  pt_BR.po  pt_PT.po  sr.po  tr.po  uk_UA.po
usr/share/oma-welcome/: about.sh.htm  apps-development.sh.htm  apps-edu.sh.htm  apps-gaming.sh.htm  apps-graphics.sh.htm  apps-internet.sh.htm  apps-kids.sh.htm  apps-multimedia.sh.htm  apps-office.sh.htm  apps-utilitarios.sh.htm  apps-utility.sh.htm  apps.sh.htm  choosemenuK.sh.htm  community.sh.htm  conf.sh.htm  index.sh.htm  news.sh.htm  om-welcome.po  om-welcome.pot  oma-welcome.po  oma-welcome.pot  omfeat.sh.htm  repo.sh.htm  translation
usr/share/oma-welcome/apps/: abrir-dnfdragora.run  abrir-drakconnect.run  abrir-drakprint.run  enable-32bits  (+150 more)
usr/share/sidu-welcome/: about.sh.htm  apps-development.sh.htm  apps-gaming.sh.htm  apps-graphics.sh.htm  apps-internet.sh.htm  apps-utility.sh.htm  apps.sh.htm  community.sh.htm  conf.sh.htm  news.sh.htm  omfeat.sh.htm  sidu-welcome.pot  translation
(+83 files in other folders)
